--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "openfpm_vcluster"]
 	path = openfpm_vcluster
-	url = ssh://git@git.mpi-cbg.de/openfpm/openfpm_vcluster.git
+	url = https://github.com/incardon/openfpm_vcluster.git
 [submodule "openfpm_devices"]
 	path = openfpm_devices
-	url = ssh://git@git.mpi-cbg.de/openfpm/openfpm_devices.git
+	url = https://github.com/incardon/openfpm_devices.git
 [submodule "openfpm_io"]
 	path = openfpm_io
-	url = ssh://git@git.mpi-cbg.de/openfpm/openfpm_io.git
+	url = https://github.com/incardon/openfpm_io.git
 [submodule "openfpm_data"]
 	path = openfpm_data
-	url = ssh://git@git.mpi-cbg.de/openfpm/openfpm_data.git
+	url = https://github.com/incardon/openfpm_data.git
 [submodule "openfpm_numerics"]
 	path = openfpm_numerics
-	url = ssh://git@git.mpi-cbg.de/openfpm/openfpm_numerics.git
+	url = https://github.com/incardon/openfpm_numerics.git
